# Selenium_TestAutomation_Project

./: README.md  pyproject.toml
pages/: checkout_page.py  checkout_page_locators.py  home_page.py  home_page_locators.py  index_page.py  index_page_locators.py  payment_success_page.py  payment_success_page_locators.py  register_success_page.py  register_success_page_locators.py  sign_in_page.py  sign_in_page_locators.py  sign_in_success_page.py  sign_in_success_page_locators.py
resources/: constants.py
tests/: conftest.py  test_cart.py  test_login.py
