[project]
name = "seleniumfinalproject-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Anush",email = "demo@icloud.com"}
]
#readme = "README.md"
#requires-python = ">=3.11"
#dependencies = [
#    "selenium 4.11"
#]

[tool.poetry.dependencies]
python = "3.11.9"
selenium = "^4.11.2"
pytest = "7.4.0"
junit-xml = "1.9"
pytest-html = "3.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
